--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,7 @@ section {
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0px -15px;
+	justify-content: center;
 }
 
 .results .result {
@@ -139,7 +140,7 @@ section {
 	padding: 15px;
 }
 
-.popup .content .close {
+.popup .content{
 	display: inline-block;
 	padding: 15px 30px;
 	font-size: 18px;
@@ -156,6 +157,13 @@ section {
 	transition: 0.4s ease-out;
 }
 
-.popup .content .close:hover {
+.popup .content:hover {
 	background: #223343;
+}
+.myButton{
+	justify-content: center;
+    display: grid;
+}
+.poster{
+	margin-bottom: 20px;
 }
